--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,74 +1,21 @@
-name: test_and_deploy
+ame: test_and_deploy
 
 on:
   push:
   workflow_dispatch:
     inputs:
       deploy:
-        description: "Souhaitez-vous jouer un déploiement ?"
+        description: "jouer un deploiment ?"
         required: false
         default: true
       test_add:
-        description: "Souhaitez-vous jouer les tests d'addition ?"
+        description: "jouer un addition"
         required: false
         default: false
       test_sub:
-        description: "Souhaitez-vous jouer les tests de soustraction ?"
+        description: " jouer les tests de soustraction"
         required: false
-        default: false
       all_tests:
-        description: "Souhaitez-vous jouer tous les tests ?"
+        description: "jouer tous les tests ?"
         required: false
         default: false
-
-jobs:
-  test_add:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.test_add == 'true' || github.event.inputs.all_tests == 'true' || github.event.inputs.deploy == 'true'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run test_add
-        run: npm run test_add
-
-  test_sub:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.test_sub == 'true' || github.event.inputs.all_tests == 'true' || github.event.inputs.deploy == 'true'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run test_sub
-        run: npm run test_sub
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [test_add, test_sub]
-    if: github.event.inputs.deploy == 'true'
-    steps:
-      - name: Deployment
-        run: echo "Déploiement"
-
-  notify_failure:
-    runs-on: ubuntu-latest
-    if: failure()
-    steps:
-      - name: Notify failure
-        run: echo "Le déploiement a échoué"
