--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -14,13 +14,14 @@ on:
           -addition
           -soustraction
           -deploiment
-          -all tests
+          -all_tests
         default : deploy
 
 jobs:
   test_add:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.test_add == 'true' || github.event.inputs.all_tests == 'true' || github.event.inputs.deploy == 'true'
+        if: github.event_name == 'push' || input.action != 'soustraction' 
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -38,7 +39,7 @@ jobs:
         
   test_sub:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.test_sub == 'true' || github.event.inputs.all_tests == 'true' || github.event.inputs.deploy == 'true'
+    if: github.event_name == 'push' || input.action != 'addition' 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -57,7 +58,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [test_add, test_sub]
-    if: github.event.inputs.deploy == 'true'
+    if: input.action == 'deploiment'
     steps:
       - name: Deployment
         run: echo "Déploiement"
