--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -65,6 +65,7 @@ jobs:
 
   notify_failure:
     runs-on: ubuntu-latest
+    needs : [deploy,test_sub,test_add]
     if: failure()
     steps:
       - name: Notify failure
