--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -5,22 +5,20 @@ on:
   workflow_dispatch:
     inputs:
       action:
-        description: "que souhaitez vous jouer ?"
+        description: "Que souhaitez-vous exécuter ?"
         required: false
-        default: true
-        type : choice
-        options :
+        default: "deploiment"  # Valeur par défaut correcte
+        type: choice
+        options:
           - deploiment
           - addition
           - soustraction
-          - deploiment
-          - all_tests
-        default : "deploiment"
+          - all_tests  # Suppression de la répétition
 
 jobs:
   test_add:
     runs-on: ubuntu-latest
-    if: inputs.event.name == 'push' || input.action != 'soustraction' 
+    if: github.event_name == 'push' || github.event.inputs.action != 'soustraction' 
 
     steps:
       - name: Checkout repository
@@ -39,7 +37,7 @@ jobs:
         
   test_sub:
     runs-on: ubuntu-latest
-    if: inputs.event.name == 'push' || input.action != 'addition' 
+    if: github.event_name == 'push' || github.event.inputs.action != 'addition' 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -58,15 +56,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [test_add, test_sub]
-    if: inputs.action == 'deploiment'
+    if: github.event.inputs.action == 'deploiment'
     steps:
       - name: Deployment
         run: echo "Déploiement"
 
   notify_failure:
     runs-on: ubuntu-latest
-    needs : [deploy,test_sub,test_add]
+    needs: [deploy, test_sub, test_add]
     if: failure()
     steps:
       - name: Notify failure
-        run: echo "Le déploiement echoue"
+        run: echo "Le déploiement a échoué"
