--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -5,20 +5,20 @@ on:
   workflow_dispatch:
     inputs:
       action:
-        description: "Que souhaitez-vous exécuter ?"
+        description: "Que souhaiter exucuter ?"
         required: false
-        default: "deploiment"  # Valeur par défaut correcte
+        default: "deploiment"  
         type: choice
         options:
           - deploiment
           - addition
           - soustraction
-          - all_tests  # Suppression de la répétition
+          - all_tests 
 
 jobs:
   test_add:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event.inputs.action != 'soustraction' 
+    if: github.event_name == 'push' || .inputs.action != 'soustraction' 
 
     steps:
       - name: Checkout repository
@@ -56,7 +56,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [test_add, test_sub]
-    if: github.event.inputs.action == 'deploiment'
+    if: inputs.action == 'deploiment'
     steps:
       - name: Deployment
         run: echo "Déploiement"
