--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -22,8 +22,8 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3 // pourque peut acceder a les repos
-
+        uses: actions/checkout@v3 
+        
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
